Added new fields to the app. Fixed formatting.

--- a/index.html
+++ b/index.html
@@ -61,19 +61,21 @@
         <tr>
           <th scope="col">School</th>
           <th scope="col">Due Date</th>
-          <th scope="col">Submitted</th>
+          <th scope="col">Sent</th>
           <th scope="col">Program</th>
           <th scope="col">App Type</th>
-          <th scope="col">CA Essay Done?</th>
+          <th scope="col">CA Essay Done</th>
           <th scope="col">Supp Essays Done</th>
-          <th scope="col" id="test">Testing<p>ACT/SAT/Optional/Writing</p></th>        
+          <th scope="col">Special Apps Done</th>
+          <th scope="col" id="test">Testing<div id="testKid"><div>ACT</div><div>SAT</div><div>TO</div><div>ACTW</div></div></th>        
           <th scope="col">Transcripts Done</th>
           <th scope="col">LORs Done</th>
           <th scope="col">FAFSA Done</th>
           <th scope="col">CSS Done</th>
-          <th scope="col">Portfolio Sent?</th>
+          <th scope="col">Portfolio Sent</th>
           <th scope="col">Portfolio Link</th>          
           <th scope="col">Result</th>
+          <th scope="col">Notes</th>
         </tr>
         <tr>
           <td> 
@@ -91,14 +93,16 @@
           <td><select disabled></select></td>
           <td><input type="checkbox" disabled></input></td>
           <td><input type="checkbox" disabled></input></td>
+          <td><input type="checkbox" disabled></input></td>
           <td><input type="checkbox" disabled><input type="checkbox" disabled><input type="checkbox" disabled><input type="checkbox" disabled></input></td>
           <td><input type="checkbox" disabled></input></td>
           <td><input type="checkbox" disabled></input></td>
           <td><input type="checkbox" disabled></input></td>
           <td><input type="checkbox" disabled></input></td>
           <td><input type="checkbox" disabled></input></td>
-          <td><input type="link" disabled></input></td>
+          <td><input type="url" disabled></input></td>
           <td><select disabled></select></td>
+         <td><input type="text" disabled></input></td>
         </tr>
       </table>
     </div>
