--- a/page-css.html
+++ b/page-css.html
@@ -20,6 +20,23 @@
     margin: 1rem;
     width: 20%;
   }
+  td {
+    white-space: nowrap;
+  }
+  td input{
+    display: inline-block;
+  }
+  input[type=url] {
+    width: 6rem;
+  }
+  #testKid div {
+    font-size: .55rem;
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    display: inline;
+    padding: 0px;
+    margin: 0;
+  }
   #studentInfo table {
     width: 100%;
   }
@@ -30,7 +47,7 @@
     width: 100%;
   }
   #test {
-    width: 5rem;
+    white-space: nowrap;
   }
   #back {
     margin: 1rem;
